Fix styling of avatar when logged in. This was broken in a511f0c42906a6cffbb51ad910d223c14b55988a. This fixes #525.

--- a/WcaOnRails/app/assets/stylesheets/delegates.scss
+++ b/WcaOnRails/app/assets/stylesheets/delegates.scss
@@ -12,17 +12,6 @@ tr.candidate-delegate {
   font-style: italic;
 }
 
-.avatar-thumbnail {
-  background-size: cover;
-  width: 50px;
-  height: 50px;
-
-  &.avatar-thumbnail-lg {
-    width: 100px;
-    height: 100px;
-  }
-}
-
 .popover-content img {
   max-width: 100%;
   max-height: 100%;
