--- a/WcaOnRails/app/assets/stylesheets/wca.scss
+++ b/WcaOnRails/app/assets/stylesheets/wca.scss
@@ -46,8 +46,21 @@ table.table {
   }
 }
 
+.avatar-thumbnail {
+  display: inline-block;
+  vertical-align: middle;
+
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+
+  &.avatar-thumbnail-lg {
+    width: 100px;
+    height: 100px;
+  }
+}
+
 .wca-user {
-  .avatar-thumbnail,
   .info {
     display: inline-block;
     vertical-align: middle;
